// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src | components | layout | header | PageSubmitButton should match snapshot with custom props 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PageSubmitButton
    className=""
    disabled={true}
    isloading={false}
    theme="green"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <button
          className="fs13 border-all no-background no-outline px7 py3"
          disabled={true}
          id="page-submit-button"
          type="submit"
        >
          <span
            className="is-semi-bold"
          >
            OK
          </span>
        </button>,
        false,
      ],
      "className": "pc-theme-green is-absolute mr12 ",
      "style": Object {
        "right": 0,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <span
            className="is-semi-bold"
          >
            OK
          </span>,
          "className": "fs13 border-all no-background no-outline px7 py3",
          "disabled": true,
          "id": "page-submit-button",
          "type": "submit",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "OK",
            "className": "is-semi-bold",
          },
          "ref": null,
          "rendered": "OK",
          "type": "span",
        },
        "type": "button",
      },
      false,
    ],
    "type": "span",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <button
            className="fs13 border-all no-background no-outline px7 py3"
            disabled={true}
            id="page-submit-button"
            type="submit"
          >
            <span
              className="is-semi-bold"
            >
              OK
            </span>
          </button>,
          false,
        ],
        "className": "pc-theme-green is-absolute mr12 ",
        "style": Object {
          "right": 0,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <span
              className="is-semi-bold"
            >
              OK
            </span>,
            "className": "fs13 border-all no-background no-outline px7 py3",
            "disabled": true,
            "id": "page-submit-button",
            "type": "submit",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "OK",
              "className": "is-semi-bold",
            },
            "ref": null,
            "rendered": "OK",
            "type": "span",
          },
          "type": "button",
        },
        false,
      ],
      "type": "span",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;

exports[`src | components | layout | header | PageSubmitButton should match snapshot with custom props 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PageSubmitButton
    className=""
    disabled={true}
    isloading={true}
    theme="purple"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        false,
        <span
          className="fs18"
        >
          <span
            className="animate-spin icon-legacy-spin6"
          />
        </span>,
      ],
      "className": "pc-theme-purple is-absolute mr12 ",
      "style": Object {
        "right": 0,
      },
    },
    "ref": null,
    "rendered": Array [
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <span
            className="animate-spin icon-legacy-spin6"
          />,
          "className": "fs18",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "animate-spin icon-legacy-spin6",
          },
          "ref": null,
          "rendered": null,
          "type": "span",
        },
        "type": "span",
      },
    ],
    "type": "span",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          false,
          <span
            className="fs18"
          >
            <span
              className="animate-spin icon-legacy-spin6"
            />
          </span>,
        ],
        "className": "pc-theme-purple is-absolute mr12 ",
        "style": Object {
          "right": 0,
        },
      },
      "ref": null,
      "rendered": Array [
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <span
              className="animate-spin icon-legacy-spin6"
            />,
            "className": "fs18",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "animate-spin icon-legacy-spin6",
            },
            "ref": null,
            "rendered": null,
            "type": "span",
          },
          "type": "span",
        },
      ],
      "type": "span",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;

exports[`src | components | layout | header | PageSubmitButton should match snapshot with default props 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PageSubmitButton
    className=""
    disabled={false}
    isloading={false}
    theme="red"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <button
          className="fs13 border-all no-background no-outline px7 py3"
          disabled={false}
          id="page-submit-button"
          type="submit"
        >
          <span
            className="is-semi-bold"
          >
            OK
          </span>
        </button>,
        false,
      ],
      "className": "pc-theme-red is-absolute mr12 ",
      "style": Object {
        "right": 0,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <span
            className="is-semi-bold"
          >
            OK
          </span>,
          "className": "fs13 border-all no-background no-outline px7 py3",
          "disabled": false,
          "id": "page-submit-button",
          "type": "submit",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "OK",
            "className": "is-semi-bold",
          },
          "ref": null,
          "rendered": "OK",
          "type": "span",
        },
        "type": "button",
      },
      false,
    ],
    "type": "span",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <button
            className="fs13 border-all no-background no-outline px7 py3"
            disabled={false}
            id="page-submit-button"
            type="submit"
          >
            <span
              className="is-semi-bold"
            >
              OK
            </span>
          </button>,
          false,
        ],
        "className": "pc-theme-red is-absolute mr12 ",
        "style": Object {
          "right": 0,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <span
              className="is-semi-bold"
            >
              OK
            </span>,
            "className": "fs13 border-all no-background no-outline px7 py3",
            "disabled": false,
            "id": "page-submit-button",
            "type": "submit",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "OK",
              "className": "is-semi-bold",
            },
            "ref": null,
            "rendered": "OK",
            "type": "span",
          },
          "type": "button",
        },
        false,
      ],
      "type": "span",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;
